--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
         </ul>
       </div>
     </nav>
-    <content>
 
-    </content>
+    <div class="content">
+      <img src="1.jpg">
+      <img src="2.jpg">
+      <img src="3.jpg">
+      <img src="4.jpg">
+      <img src="5.jpg">
+      <img src="6.jpg">
+    </div>
     <footer>
 
     </footer>
