--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     </nav>
 
     <div class="content">
-      <img src="1.jpg">
-      <img src="2.jpg">
-      <img src="3.jpg">
-      <img src="4.jpg">
-      <img src="5.jpg">
-      <img src="6.jpg">
+      <img src="1.jpg" height="100px" width="100px">
+      <img src="2.jpg" height="100px" width="100px">
+      <img src="3.jpg" height="100px" width="100px">
+      <img src="4.jpg" height="100px" width="100px">
+      <img src="5.jpg" height="100px" width="100px">
+      <img src="6.jpg" height="100px" width="100px">
     </div>
     <footer>
 
