--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+  <center>
     <nav class="header">
       <div>
         <ul>
@@ -17,15 +18,19 @@
     </nav>
 
     <div class="content">
-      <img src="1.jpg" height="100px" width="100px">
-      <img src="2.jpg" height="100px" width="100px">
-      <img src="3.jpg" height="100px" width="100px">
-      <img src="4.jpg" height="100px" width="100px">
-      <img src="5.jpg" height="100px" width="100px">
-      <img src="6.jpg" height="100px" width="100px">
+      <br>
+      <img src="1.jpg" height="200px" width="230px">
+      <img src="2.jpeg" height="200px" width="230px">
+      <img src="3.jpeg" height="200px" width="230px">
+      <br>
+      <br>
+      <img src="4.jpeg" height="200px" width="230px">
+      <img src="5.jpeg" height="200px" width="230px">
+      <img src="6.jpeg" height="200px" width="230px">
     </div>
     <footer>
 
     </footer>
+  </center>
   </body>
 </html>
