--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
     <div class="content">
       <br>
-      <img src="1.jpg" height="200px" width="230px">
-      <img src="2.jpeg" height="200px" width="230px">
-      <img src="3.jpeg" height="200px" width="230px">
+      <img src="1.jpg" height="200px" width="230px" class="img-recipe">
+      <img src="2.jpeg" height="200px" width="230px" class="img-recipe">
+      <img src="3.jpeg" height="200px" width="230px" class="img-recipe">
       <br>
       <br>
-      <img src="4.jpeg" height="200px" width="230px">
-      <img src="5.jpeg" height="200px" width="230px">
-      <img src="6.jpeg" height="200px" width="230px">
+      <img src="4.jpeg" height="200px" width="230px" class="img-recipe">
+      <img src="5.jpeg" height="200px" width="230px" class="img-recipe">
+      <img src="6.jpeg" height="200px" width="230px" class="img-recipe">
     </div>
     <footer>
 
