--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav class="header">
       <div>
         <ul>
-          <li>Recipes</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="#" class="links">Recipes</a></li>
+          <li><a href="#" class="links">About</a></li>
+          <li><a href="#" class="links">Contact</a></li>
         </ul>
       </div>
     </nav>
