links on images

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
     <div class="content">
       <br>
-      <img src="1.jpg" height="200px" width="230px" class="img-recipe">
-      <img src="2.jpeg" height="200px" width="230px" class="img-recipe">
-      <img src="3.jpeg" height="200px" width="230px" class="img-recipe">
+      <a href="#"><img src="1.jpg" height="200px" width="240px" class="img-recipe"></a>
+      <a href="#"><img src="2.jpeg" height="200px" width="240px" class="img-recipe"></a>
+      <a href="#"><img src="3.jpeg" height="200px" width="240px" class="img-recipe"></a>
       <br>
       <br>
-      <img src="4.jpeg" height="200px" width="230px" class="img-recipe">
-      <img src="5.jpeg" height="200px" width="230px" class="img-recipe">
-      <img src="6.jpeg" height="200px" width="230px" class="img-recipe">
+      <a href="#"><img src="4.jpeg" height="200px" width="240px" class="img-recipe"></a>
+      <a href="#"><img src="5.jpeg" height="200px" width="240px" class="img-recipe"></a>
+      <a href="#"><img src="6.jpeg" height="200px" width="240px" class="img-recipe"></a>
     </div>
     <footer>
 
